Fixed overflow

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -1,9 +1,9 @@
 html {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 body.container-fluid {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #indexBody {
